<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_20dp"
        app:corner_radius="@dimen/dimen_15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            android:padding="@dimen/dimen_20dp">

            <TextView
                style="@style/TextViewStyleBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="@dimen/font_18sp" />

            <TextView
                android:id="@+id/txtMessage"
                style="@style/TextViewStyleRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:gravity="center"
                tools:text="App Message goes here.." />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/dimen_20dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCancel"
                    style="@style/ButtonStyleHollow"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnOk"
                    style="@style/ButtonStyle"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:layout_weight="1"
                    android:text="@string/ok" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>
    </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>
</layout>